components/card.css
.card {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #f3edc8;
  margin-top: 0.75rem;
  margin-left: 0.75rem;
  margin-right: 0.75rem;
  padding: 0.5rem;
  border-radius: 8px;
}

/* Make sure the last card is not covered by the footer */
.card:last-child {
  margin-bottom: 50px;
}

/* Make sure the last card is not covered by the footer */
.card:first-child {
  margin-top: 65px;
}

.card--profile-img {
  position: relative;
  display: flex;
  flex-direction: row;
  gap: 30px;
  align-items: center;
  margin-top: 5rem;
  margin-left: 0.75rem;
  margin-right: 0.75rem;
  padding: 0.5rem;
  border-radius: 8px;
  background-color: transparent;
  color: #f3edc8;
  font-size: 1.5rem;
}

#profile-img {
  width: 120px;
  border-radius: 50%;
  margin: 2rem 0;
}

.card--profile-counter {
  flex-direction: row;
  justify-content: space-evenly;
  background-color: transparent;
}

.bookmark {
  position: absolute;
  top: 5px;
  right: 10px;
}

.card ul {
  display: flex;
  list-style: none;
  align-self: flex-start;
}

.tags {
  display: flex;
  align-content: flex-start;
}

.tags li {
  font-size: smaller;
  background-color: #bf3131;
  margin: 0.4rem 0.2rem;
  border-radius: 0.3rem;
  padding: 0.3rem;
  color: #f3edc8;
}

.answer {
  padding: 0.5rem;
}

.hidden {
  display: none;
}

